# All changes to data.tree are documented here.

## Version 0.1.7 Chestnut

- Added conversion to and from list
- Added Clone
