@@ -1,5 +1,6 @@
 # Generated by roxygen2 (4.1.1): do not edit by hand
 
+S3method(as.Node,data.frame)
 S3method(as.Node,list)
 S3method(as.data.frame,Node)
 S3method(as.list,Node)
